# dsba-platform

./: .gitignore  Dockerfile  MLOps Project Specifications.docx  README.md  docker_push.sh  pyproject.toml  requirements.txt
models_registry/: logistic_regression.pkl  scaler.pkl  titanic_model.json  titanic_model.pkl  titanic_model_logistic_regression_grid_search.json  titanic_model_logistic_regression_grid_search.pkl  titanic_model_random_forest.json  titanic_model_random_forest.pkl  titanic_model_xgboost.json  titanic_model_xgboost.pkl
src/: Dockerfile  requirements.txt
src/adclick/: Notebook_adclick.ipynb  __init__.py  api2.py  data_loader.py  main.py  model_evaluation.py  model_prediction.py  model_registry.py  model_training.py  preprocessing.py
src/adclick/models_registry/: lgbm_tuned.pkl  logistic_regression.pkl  scaler.pkl
src/api/: api.py
src/api_old/: api.py
src/cli/: README.md  api.py  dsba_cli
src/dsba/: model_evaluation.py  model_prediction.py  model_registry.py  model_training.py  preprocessing.py
src/dsba/data_ingestion/: __init__.py  databases.py  files.py
src/notebooks/: model_training_example.ipynb  model_training_modified.ipynb
tests/: test_training.py
